# coursework_2

./: README.md  main.py  pyproject.toml
src/: hh_api.py  user_interface.py  utils.py  vacancy.py  vacancy_storage.py
tests/: test_hh_api.py  test_vacancy_storage.py
