[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = ["Дмитрий <kriukov@pos-credit.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
mypy = "^1.11.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = 'git'


[tool.isort]
line_length = 119

[tool.mypy]
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = 'venv'

